--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,5 +1,11 @@
+2020-11-07
+cha: checks.php: Now more and different characters are allowed for group names.
++++++
+2020-11-02
+cha: CATSG::generate: Now allows m23 UCS app versions with characters for indicating a revision.
++++++
 2020-10-29
-patch: 
+patch 101402: Fixes and smal improvements.
 cha: UPDATE_doUpdate: Now imports the package sign key. Just in case it was not imported before.
 cha: CLCFG_sourceslistCreateConfigFiles: Now adds lines to add only if they are not existing in the destination file.
 +++++
