--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,7 @@
+2020-12-16
+cha: UCS_getOrganisationUnits: Get information about all organisation units (eg. schools).
+cha: UCS_getUDMCompleteInfo: Now has a multiple option.
++++++
 2020-12-14
 cha: client_partition.php: Added a warning, when existing partition and formating jobs would be deleted.
 new: UCS_getUDMCompleteInfo: Get complete information from the UCS's LDAP by udm tool for a given module.
